--- a/sass/queries.scss
+++ b/sass/queries.scss
@@ -18,4 +18,22 @@
 			}
 		}
 	}
+
+	.popup{
+		height: calc(100vh - 100px);
+		padding: 1rem;
+
+		h1{
+			font-size: 20px;
+			margin: 1rem 0;
+		}
+
+		ul{
+			padding-left: .51rem;
+			margin: .5rem 0;
+			max-height: 300px;
+			width: 100%;
+		}
+
+	}
 }
