--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -759,7 +759,7 @@ body {
   background: rgba(255, 255, 255, 0.5);
   font-weight: bold;
   display: inline;
-  max-width: 190px;
+  max-width: 210px;
   min-height: 60px;
   z-index: 10;
   overflow: hidden;
@@ -914,13 +914,128 @@ body {
     -o-border-radius: 50%;
     border-radius: 50%; }
 
+.popup {
+  position: fixed;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  max-width: 90%;
+  width: 900px;
+  height: calc(100vh - 100px);
+  padding: 2rem;
+  background: rgba(255, 255, 255, 0.89);
+  opacity: 0;
+  z-index: -1;
+  height: calc(100vh - 100px);
+  overflow: hidden;
+  overflow-y: auto;
+  -webkit-transition: all 0.9s ease;
+  -khtml-transition: all 0.9s ease;
+  -moz-transition: all 0.9s ease;
+  -ms-transition: all 0.9s ease;
+  -o-transition: all 0.9s ease;
+  transition: all 0.9s ease;
+  -webkit-box-shadow: 0 0 3px #323232;
+  -khtml-box-shadow: 0 0 3px #323232;
+  -moz-box-shadow: 0 0 3px #323232;
+  -ms-box-shadow: 0 0 3px #323232;
+  -o-box-shadow: 0 0 3px #323232;
+  box-shadow: 0 0 3px #323232;
+  -webkit-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px; }
+  .popup.open {
+    z-index: 100;
+    opacity: 1; }
+  .popup h1 {
+    text-align: center;
+    font-weight: bold;
+    font-family: 'Architects Daughter', cursive;
+    font-size: 27px;
+    margin-bottom: 2rem;
+    text-decoration: overline; }
+  .popup ul {
+    list-style: none;
+    padding-left: 1.5rem;
+    margin: 1rem 0;
+    display: inline-block;
+    width: calc(100% / 2 - 50px);
+    vertical-align: top; }
+    .popup ul li {
+      padding: .5rem;
+      margin: .15rem;
+      font-size: 14px; }
+      .popup ul li.header {
+        margin: .5rem 0;
+        font-weight: bold; }
+      .popup ul li em {
+        padding: .25rem;
+        background: rgba(130, 130, 130, 0.3);
+        vertical-align: top;
+        -webkit-border-radius: 3px;
+        -khtml-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
+        border-radius: 3px; }
+  .popup .close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    padding: .25rem .6rem;
+    border: solid thin #323232;
+    cursor: pointer;
+    background: white;
+    -webkit-border-radius: 50%;
+    -khtml-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-transform: scale(0.7);
+    -khtml-transform: scale(0.7);
+    -moz-transform: scale(0.7);
+    -ms-transform: scale(0.7);
+    -o-transform: scale(0.7);
+    transform: scale(0.7);
+    -webkit-transition: all 0.5s ease;
+    -khtml-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease; }
+    .popup .close:hover {
+      -webkit-transform: scale(1);
+      -khtml-transform: scale(1);
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      transform: scale(1); }
+
 @media (max-width: 500px) {
   .clock .config {
     left: -20px; }
     .clock .config ul.size li:last-child {
       display: none; }
   .clock.small .config {
-    left: -60px; } }
+    left: -60px; }
+
+  .popup {
+    height: calc(100vh - 100px);
+    padding: 1rem; }
+    .popup h1 {
+      font-size: 20px;
+      margin: 1rem 0; }
+    .popup ul {
+      padding-left: .51rem;
+      margin: .5rem 0;
+      max-height: 300px;
+      width: 100%; } }
 @keyframes rotate {
   0%, 100% {
     -webkit-transform: scale(1) rotate(0);
